# SD-dMFA

./: README.md  pyproject.toml
configs/: base.yml  calibration.yml  coupling.yml  end_use.yml  end_use_detail.yml  indicators.yml  materials.yml  qualities.yml  regions.yml  stages.yml  time.yml  trade.yml
configs/runs/: _core.yml  mvp.yml  r-strategies.yml
configs/templates/: run_core_interface.yml  run_overlay_interface.yml  scenario_variant_interface.yml  sd_parameters_temporal_interface.yml  variable_registry_interface.yml
data/: README.md
data/exogenous/: beneficiation_output_observed.csv  collection_routing_rates.csv  end_use_shares.csv  final_demand.csv  lifetime_distributions.csv  primary_extraction_observed.csv  primary_refined_net_imports.csv  primary_refined_observed.csv  primary_refined_output.csv  remanufacturing_end_use_eligibility.csv  stage_yields_losses.csv  stock_in_use.csv
docs/: README.md
docs/getting-started/: QUICKSTART.md  TROUBLESHOOTING.md
docs/governance/: ASSUMPTIONS.md  (+3 more)
registry/: variable_registry.yml
scripts/: README.md  run_batch.py  run_one.py
tests/: test_config_io_scenarios.py  test_crm_model_wrappers.py  test_indicators_subsets.py  test_interface_shapes.py  test_lifetimes.py  test_mfa_module_split.py  test_mvp_scenario_consistency_contracts.py  test_realism_audit.py  test_repo_layout_scaffold.py  test_reporting_profile_expander.py  test_scenario_dimension_override_contracts.py  test_scenario_temporal_forms.py  test_scenarios.py  test_sd_builder.py  test_sd_module_split.py  test_sd_params_temporal.py  test_smoke.py
(+103 files in other folders)
